--- a/MileStone 01/Module 05/my-portfolio/index.html
+++ b/MileStone 01/Module 05/my-portfolio/index.html
@@ -96,17 +96,20 @@
                     <div class="box">
                         <img src="./images/icons/react.png" alt="">
                         <h4>React</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="box">
                         <img src="./images/icons/nodejs.png" alt="">
                         <h4>Node.js</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="box">
                         <img src="./images/icons/mongo.png" alt="">
                         <h4>MongoDB</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
 
@@ -124,22 +127,25 @@
                             <h1>My Education</h1>
                             <h4>Master in Computer Engineering</h4>
                             <h5>Harvard University / 2015 - 2017</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                                <hr>
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                            <hr>
                         </div>
                         <div class="deepInnerDiv">
                             <h1>Master in Computer Engineering</h1>
                             <h5>Harvard University / 2015 - 2017</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                                <hr>
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                            <hr>
                         </div>
                         <div class="deepInnerDiv">
                             <h1>Master in Computer Engineering</h1>
                             <h5>Harvard University / 2015 - 2017</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
                         </div>
                     </div>
                     <div class="exp_info">
@@ -147,30 +153,53 @@
                             <h1>My Experience</h1>
                             <h5>Sr. Font End Developer</h5>
                             <p>Apple Inc / 2020 - Current</p>
-                            <p>List skill/technologies here. You can change the icon above 
+                            <p>List skill/technologies here. You can change the icon above
                                 to any of the 1500+ FontAwesome 5 free icons available.</p>
-                                <hr>
+                            <hr>
                         </div>
                         <div class="deepInnerDiv">
                             <h1>Jr. Font End Developer</h1>
                             <h5>Dribbble Inc / 2018 - 2022</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                                <hr>
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                            <hr>
                         </div>
                         <div class="deepInnerDiv">
                             <h1>HTML Developer</h1>
                             <h5>Adobe Inc / 2017 - 2018</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
                         </div>
                     </div>
                 </div>
+
+                <button class="btn cvbtn">Download
+                    CV</button>
             </div>
         </section>
-        
+
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer_section">
+            <div class="footerDiv">
+                <h1>Lets Connect</h1>
+                <p class="color_primary">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <img src="./images/icons/facebook.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
+                <img src="./images/icons/insta.png" alt="">
+            </div>
+            <div class="footerDiv">
+                <h1>Let’s Message me</h1>
+                <form action="">
+                    <input class="myform" type="text" name="" id="" placeholder="Your Name">
+                    <input class="myform" type="email" name="" id="" placeholder="Your E-Mail">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
