--- a/MileStone 01/Module 05/my-portfolio/index.html
+++ b/MileStone 01/Module 05/my-portfolio/index.html
@@ -17,14 +17,14 @@
                 <ul class="menu">
                     <li class="menuitem">Portfolio</li>
                     <li class="menuitem">Blog</li>
-                    <li class="menuitem"><button class="btn">Hire Me</button></li>
+                    <li class="menuitem"><button class="btn bug2">Hire Me</button></li>
                 </ul>
             </div>
 
             <div class="highlight-content">
 
                 <div>
-                    <h3 class="color_primary">Hi, I am</h3>
+                    <h3 class="color_primary bug">Hi, I am</h3>
                     <h1>Mary Hardy</h1>
                     <p class="color_primary">Shot what able cold new see hold.Friendly as an betrayed formerly he. <br>
                         Morning because as to society behaved moments.</p>
@@ -197,6 +197,7 @@
                     <input class="myform" type="email" name="" id="" placeholder="Your E-Mail">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                 </form>
+                <button class="submitbtn">Submit</button>
             </div>
         </div>
     </footer>
