--- a/MileStone 01/Module 05/practice_01/index.html
+++ b/MileStone 01/Module 05/practice_01/index.html
@@ -19,7 +19,28 @@
             </div>
         </div>
     </header>
-    <main></main>
+
+
+    <main>
+        <section>
+            <div class="info_sectio">
+                <div class="info_one">
+                    <img src="./images/person.png" alt="">
+                </div>
+                <div class="info_two">
+                    <h2>My failures of <br> previous year</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
