--- a/MileStone 01/Module 05/practice_01/index.html
+++ b/MileStone 01/Module 05/practice_01/index.html
@@ -40,6 +40,40 @@
                 </div>
             </div>
         </section>
+        <!-- info section completed -->
+
+        <section>
+            <div class="plan_section">
+                <h1>My Plans</h1>
+                <div class="inside_plane_section">
+                    <div class="inner_plan_div">
+                        <img src="./images/icons/web.png" alt="">
+                        <h3>Web Development</h3>
+                        <p>I want to start</p>
+                    </div>
+                    <div class="inner_plan_div">
+                        <img src="./images/icons/js.png" alt="">
+                        <h3>Javascript</h3>
+                        <p>I want to learn</p>
+                    </div>
+                    <div class="inner_plan_div">
+                        <img src="./images/icons/smoke.png" alt="">
+                        <h3>Smoking Habit</h3>
+                        <p>I want to end</p>
+                    </div>
+                    <div class="inner_plan_div">
+                        <img src="./images/icons/ecom.png" alt="">
+                        <h3>ecommerce</h3>
+                        <p>I want to develop</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- planes section done -->
+
+        <section>
+            
+        </section>
     </main>
     <footer></footer>
 </body>
