mindset section completed

--- a/MileStone 01/Module 05/practice_01/index.html
+++ b/MileStone 01/Module 05/practice_01/index.html
@@ -71,8 +71,11 @@
         </section>
         <!-- planes section done -->
 
-        <section>
-            
+        <section class="parent_mindset">
+            <div class="mindset_section">
+                <h1>Awlays keep a positive <br> mindset</h1>
+                <button>Call Now</button>
+            </div>
         </section>
     </main>
     <footer></footer>
