--- a/MileStone 01/Module 05/practice_01/index.html
+++ b/MileStone 01/Module 05/practice_01/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New year new me!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -78,6 +78,17 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+
+
+    <footer>
+        <div class="footer_section">
+            <div class="footer_box"></div>
+            <div class="footer_box">
+                <h3>Subscribe</h3>
+                <input type="email" name="" id="" placeholder="Enter Your E-mail">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
