--- a/MileStone 01/Module 05/practice_01/index.html
+++ b/MileStone 01/Module 05/practice_01/index.html
@@ -82,8 +82,18 @@
 
     <footer>
         <div class="footer_section">
-            <div class="footer_box"></div>
-            <div class="footer_box">
+            <div class="footer_box pseudo_footer_box">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <div class="footer_img">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="footer_box refooter_box">
                 <h3>Subscribe</h3>
                 <input type="email" name="" id="" placeholder="Enter Your E-mail">
                 <button>Subscribe</button>
