--- a/Milestone 02/Module 07/flexbox.html
+++ b/Milestone 02/Module 07/flexbox.html
@@ -22,6 +22,13 @@
             height: 100px;
             width: 100px;
         }
+
+
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 <body>
@@ -37,5 +44,17 @@
         <div class="box">item-9</div>
         <div class="box">item-10</div>
     </div>
+
+
+
+    <form action="">
+        <input type="text" name="" id="" placeholder="enter your name" required>
+        <input type="email" name="" id="" placeholder="Enter E-mail" required>
+        <input type="password" name="" id="" placeholder="Enter your pasword" required>
+        <div>
+            <input type="reset" value="Reset">
+            <input type="submit" value="Submit">
+        </div>
+    </form>
 </body>
 </html>
