--- a/Milestone 04/Module 20/leapYear.html
+++ b/Milestone 04/Module 20/leapYear.html
@@ -20,7 +20,13 @@
 
         isLeapYear(2020);
         isLeapYear(2022);
-        
+
+
+        // greet();
+
+        function greet(){
+            console.log('hello world!')
+        }
     </script>
 </body>
 </html>
