--- a/Milestone 04/Module 21/fibo.html
+++ b/Milestone 04/Module 21/fibo.html
@@ -23,6 +23,13 @@
         let result = fiboNacci(12)
         console.log(result);
 
+
+        var a = 2;
+        var b = 3;
+        if (a < b) {
+            console.log('Hello');
+        }
+
     </script>
 </body>
 
