--- a/Milestone 05/Module 25/commentBox.html
+++ b/Milestone 05/Module 25/commentBox.html
@@ -68,7 +68,7 @@
     </div>
 
     <div id="Comment-box">
-        <textarea name="" id="input-field" cols="60" rows="5" placeholder="write your comment here"></textarea>
+        <textarea name="" id="input-field" cols="60" rows="5" placeholder="Leave a comment here"></textarea>
         <button id="submit-button">post</button>
     </div>
 
