--- a/Milestone 07/Module 37/localAndSessionStorage.html
+++ b/Milestone 07/Module 37/localAndSessionStorage.html
@@ -20,6 +20,13 @@
         console.log(JSON.parse(localStorage.getItem('laptop')))
         console.log(JSON.parse(localStorage.getItem('Details')))
 
+       let x = 0
+       if(x){
+        console.log(true)
+       }else{
+        console.log(false)
+       }
+        
     </script>
 </body>
 </html>
